# ai-act-gdpr-assistant

./: .dockerignore  .env.example  .gitignore  DEVLOG.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
data/raw/: fixture.jsonl
eval/: questions.yaml  runner.py
load_test/: run.py
scripts/: build_indices.py  download_data.py
src/agentic_rag/: __init__.py  config.py
src/agentic_rag/graph/: main.py  nodes.py  state.py
src/agentic_rag/ingest/: parse.py  run.py
src/agentic_rag/llm/: base.py
src/agentic_rag/rag/: store.py  subgraph.py
src/agentic_rag/tools/: deadline.py  web_search.py
src/agentic_rag/ui/: app.py
tests/: test_llm.py  test_main_graph.py  test_parse.py  test_rag_subgraph.py  test_tools.py
